--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -1,5 +1,7 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:vm="clr-namespace:GameHostList.ViewModels"
+        x:Class="GameHostList.Views.MainWindow"
         Title="Lista Hostów Gry" Width="600" Height="400">
   <StackPanel Margin="10">
     <TextBlock Text="Dodaj nowy host:" FontSize="16"/>
