--- a/App.axaml
+++ b/App.axaml
@@ -1,4 +1,6 @@
-<Application xmlns="https://github.com/avaloniaui">
+<Application xmlns="https://github.com/avaloniaui"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             x:Class="GameHostList.App">
   <Application.Styles>
     <FluentTheme Mode="Light"/>
   </Application.Styles>
